playing with commit

--- a/html/index.html
+++ b/html/index.html
@@ -3,4 +3,6 @@
     <h2>Another Git push</h2>
       <h3>Testing Users</h3>
         <h5>Configuration Test!</h5>
+<head></head>
+<body></body>
 </html>
