final commit trial

--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
     <h2>Another Git push</h2>
       <h3>Testing Users</h3>
         <h5>Configuration Test!</h5>
+          <h6>Final commit test</h6>
 <head></head>
 <body></body>
 </html>
