--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,12 @@
 <html>
+<head>
+</head>
   <h1>Welcome to my Github</h1>
     <h2>Another Git push</h2>
       <h3>Testing Users</h3>
         <h5>Configuration Test!</h5>
           <h6>Final commit test</h6>
-<head></head>
-<body></body>
+<body>
+<title>...</title><!--Comment out-->
+</body>
 </html>
