--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,11 @@
     <h2>Another Git push</h2>
       <h3>Testing Users</h3>
         <h5>Configuration Test!</h5>
-          <h6>Final commit test</h6>
+          <h6>Final commit test</h6><
 <body>
 <title>...</title><!--Comment out-->
+<div id=supprt>
+  <textarea></textarea>
+</div>
 </body>
 </html>
