--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <h2>Another Git push</h2>
       <h3>Testing Users</h3>
         <h5>Configuration Test!</h5>
-          <h6>Final commit test</h6><
+          <h6>Final commit</h6><
 <body>
 <title>...</title><!--Comment out-->
 <div id=supprt>
