--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 <body>
 <title>...</title><!--Comment out-->
 <div id=supprt>
-  <textarea></textarea>asdf
+  <textarea></textarea>
 </div>
 </body>
 </html>
