--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,9 @@
 <body>
 <title>...</title><!--Comment out-->
 <div id=supprt>
-  <textarea></textarea>
+<textarea> no code </textarea>
+
 </div>
+
 </body>
 </html>
