--- a/html/test.html
+++ b/html/test.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title
 
-  <title>HTML5 Project</title>
+  <title>HTML5</title>
   <h2>Nice</h2>
   <ul>
     <li class="demo">1</li>
